src/k8s/production/parser.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: parser
  name: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      run: parser
  template:
    metadata:
      labels:
        run: parser
    spec:
      containers:
      - image: gcr.io/kip-styles/parser:099f5f7
        imagePullPolicy: Always
        name: parser
        ports:
        - containerPort: 8083
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
