src/k8s/production/facebook.production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: facebook
  name: facebook
spec:
  replicas: 1
  selector:
    matchLabels:
      run: facebook
  template:
    metadata:
      labels:
        run: facebook
    spec:
      containers:
      - image: gcr.io/kip-styles/facebook:08134aa
        imagePullPolicy: Always
        name: facebook
        ports:
        - containerPort: 4343
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: facebook
  name: facebook
spec:
  ports:
  - port: 4343
    protocol: TCP
    targetPort: 4343
  selector:
    run: facebook
  type: LoadBalancer
