src/k8s/production/parser.production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: parser
  namespace: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: parser
    spec:
      containers:
      - image: gcr.io/kip-styles/parser:latest
        imagePullPolicy: Always
        name: parser
        ports:
        - containerPort: 8083
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8083
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: parser
  namespace: production
  labels:
    app: parser
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    app: parser
