src/k8s/production/payments.production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payments
  namespace: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: payments
        tier: frontend
    spec:
      containers:
      - name: payments
        image: gcr.io/kip-styles/payments:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /kip/payments/secrets/
          name: kip-creditcard
          readOnly: true
      volumes:
      - name: kip-creditcard
        secret:
          secretName: kip-cc
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: production
  labels:
    app: payments
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: payments
