src/k8s/production/picstitch.production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: production
  name: picstitch
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: picstitch
    spec:
      containers:
      - image: gcr.io/kip-styles/picstitch:latest
        imagePullPolicy: Always
        name: picstitch
        ports:
        - containerPort: 5000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: picstitch
  labels:
    app: picstitch
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: picstitch
