src/k8s/production/slack.production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: slack
  namespace: production
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: slack
    spec:
      containers:
      - image: gcr.io/kip-styles/slack:latest
        imagePullPolicy: Always
        name: slack
        ports:
        - containerPort: 8000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 100
          timeoutSeconds: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 100
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack
  name: slack
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: slack
  type: NodePort
