src/k8s/production/ingress.production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production
  namespace: production
spec:
  rules:
  - host: delivery-picstitch.kipthis.com
    http:
      paths:
      - backend:
          serviceName: delivery-picstitch
          servicePort: 80
  - host: picstitch.kipthis.com
    http:
      paths:
      - backend:
          serviceName: picstitch
          servicePort: 80
  - host: parser.kipthis.com
    http:
      paths:
      - backend:
          serviceName: parser
          servicePort: 80
