src/k8s/production/payments.ingress.production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payments
  namespace: production
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: payments-ssl-certs
  backend:
    serviceName: payments
    servicePort: 80
